Handle page deletion edge cases and clean up controllers